--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <div class="tabs-control">
         <div class="tabs-group">
-            <a href="#" id="tab-1" class="tab tab-active">tab3</a>
-            <a href="#" id="tab-2" class="tab">tab2</a>
-            <a href="#" id="tab-3" class="tab">tab1</a>
+            <a href="#" class="tab tab-active">tab3</a>
+            <a href="#" class="tab">tab2</a>
+            <a href="#" class="tab">tab1</a>
         </div>
         <div class="tabs-content-group">
             <div id="content-1" class="content content-active">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit, voluptas? </div>
