add  script and animation

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <a href="#" class="tab">tab1</a>
         </div>
         <div class="tabs-content-group">
-            <div id="content-1" class="content content-active">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit, voluptas? </div>
-            <div id="content-2" class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A quisquam accusamus blanditiis ratione totam illum perspiciatis, dolores aspernatur impedit molestiae. </div>
-            <div id="content-3" class="content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam et odio maxime corporis soluta, atque asperiores provident explicabo ut voluptatibus, enim obcaecati officiis incidunt nemo autem aspernatur id magni. Harum. </div>
+            <div class="text-tab text-tab-active">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit, voluptas? </div>
+            <div class="text-tab">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A quisquam accusamus blanditiis ratione totam illum perspiciatis, dolores aspernatur impedit molestiae. </div>
+            <div class="text-tab">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam et odio maxime corporis soluta, atque asperiores provident explicabo ut voluptatibus, enim obcaecati officiis incidunt nemo autem aspernatur id magni. Harum. </div>
         </div>
     </div>
     
